Order and provider CRUD opertaions